Load astar library in pathfinding example

--- a/examples/pathfinding_ml.html
+++ b/examples/pathfinding_ml.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   <script src="three.js"></script>
+  <script src="astar.js"></script>
   <script>
     let container, scene, camera, display, model;
     let mesher = null;
