--- a/examples/pathfinding_ml.html
+++ b/examples/pathfinding_ml.html
@@ -34,14 +34,19 @@
       return mesh;
     }; */
 
-    /* const geometryPositions = Float32Array.from([0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5]);
-    const geometryNormals = Float32Array.from([1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1]);
-    const geometryIndices = Uint16Array.from([0, 2, 1, 2, 3, 1, 4, 6, 5, 6, 7, 5, 8, 10, 9, 10, 11, 9, 12, 14, 13, 14, 15, 13, 16, 18, 17, 18, 19, 17, 20, 22, 21, 22, 23, 21]); */
+    const numCubes = 100;
+    const cubeSize = 0.2;
+    const cubeRange = 1;
     const cubeGeometry = new THREE.BoxBufferGeometry(1, 1, 1);
     const pointGeometry = cubeGeometry.clone().applyMatrix(new THREE.Matrix4().makeScale(0.01, 0.01, 0.01));
     const pointMaterial = new THREE.MeshPhongMaterial({
       color: 0x42a5f5,
     });
+    const lineGeometry = cubeGeometry.clone().applyMatrix(new THREE.Matrix4().makeScale(0.01/2, 0.01/2, 1));
+    const lineMaterial = new THREE.MeshPhongMaterial({
+      color: 0xFFFFFF,
+    });
+    let first = true;
 
     function init() {
       container = document.createElement('div');
@@ -193,6 +198,68 @@
             }
           }
         }
+        if (first) {
+          const keys = Object.keys(waypoints);
+          const key1 = keys[Math.floor(Math.random() * keys.length)];
+          const waypoint1 = waypoints[key1];
+          const key2 = keys[Math.floor(Math.random() * keys.length)];
+          const waypoint2 = waypoints[key2];
+
+          const path = astar(waypoint1, waypoint2, {
+            id (node) {
+              return `${node.x}:${node.y}:${node.z}`;
+            },
+            isGoal(node) {
+              return node === waypoint2;
+            },
+            getSuccessors(node) {
+              let result = [];
+              for (let dz = -1; dz < 1; dz++) {
+                for (let dy = -1; dy < 1; dy++) {
+                  for (let dx = -1; dx < 1; dx++) {
+                    if (dz !== 0 || dy !== 0 || dx !== 0) {
+                      const key = `${node.x + dx*cubeSize}:${node.y + dy*cubeSize}:${node.z + dz*cubeSize}`;
+                      const neighbor = waypoints[key];
+                      if (neighbor) {
+                        result.push(neighbor);
+                      }
+                    }
+                  }
+                }
+              }
+              return result;
+            },
+            distance(nodeA, nodeB) {
+              return 1;
+            },
+            estimate(node, goal) {
+              return node.distanceToSquared(goal);
+            }
+          });
+
+          if (path.length > 1) {
+            for (let i = 0; i < path.length - 1; i++) {
+              const waypoint1 = path[i];
+              const waypoint2 = path[i+1];
+
+              const lineMesh = new THREE.Mesh(lineGeometry, lineMaterial);
+              lineMesh.position
+                .copy(waypoint1)
+                .add(waypoint2)
+                .divideScalar(2)
+                .add(localVector.set(cubeSize/2, cubeSize/2, cubeSize/2));
+              lineMesh.quaternion.setFromUnitVectors(
+                localVector.set(0, 0, -1),
+                localVector2.copy(waypoint2).sub(waypoint1).normalize()
+              );
+              lineMesh.scale.z = waypoint1.distanceTo(waypoint2) * 0.8;
+              lineMesh.frustumCulled = false;
+              scene.add(lineMesh);
+            }
+
+            first = false;
+          }
+        }
       };
       const _removeTerrainMesh = terrainMesh => {
         scene.remove(terrainMesh);
@@ -229,10 +296,6 @@
         mesher.onmesh = _onMesh;
       } else {
         const gl = renderer.getContext();
-
-        const numCubes = 100;
-        const cubeSize = 0.2;
-        const cubeRange = 1;
 
         const geometryPositions = cubeGeometry.attributes.position.array;
         const geometryNormals = cubeGeometry.attributes.normal.array;
