Make reality tab open switch reset list index

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1351,6 +1351,7 @@ function animate(time, frame) {
 
                           menuMesh.optionsMesh.list = 'tabs';
                           menuMesh.optionsMesh.updateOptions();
+                          menuMesh.listMesh.scrollIndex = 0;
                           menuMesh.listMesh.updateList();
                         }
 
