Remove meshing_ml example transform matrix awareness

--- a/examples/meshing_ml.html
+++ b/examples/meshing_ml.html
@@ -126,10 +126,7 @@
         mesh.frustumCulled = false;
         return mesh;
       };
-      const _loadTerrainMesh = (terrainMesh, {transformMatrix: transformMatrixArray, positionBuffer, positionCount, normalBuffer, normalCount, indexBuffer, count}) => {
-        terrainMesh.matrix.fromArray(transformMatrixArray);
-        terrainMesh.matrixWorldNeedsUpdate = true;
-
+      const _loadTerrainMesh = (terrainMesh, {positionBuffer, positionCount, normalBuffer, normalCount, indexBuffer, count}) => {
         const {geometry} = terrainMesh;
         const attributes = renderer.getAttributes();
 
@@ -155,7 +152,7 @@
       const _onMesh = updates => {
         for (let i = 0; i < updates.length; i++) {
           const update = updates[i];
-          const {transformMatrix, id, type} = update;
+          const {id, type} = update;
 
           if (type === 'new' || type === 'update') {
             _loadTerrainMesh(_getTerrainMesh(id), update);
