--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -158,7 +158,7 @@ const _makeRenderer = () => {
   };
 };
 
-const _openUrl = (u, position = new THREE.Vector3(), rotation = new THREE.Quaternion(), scale, d = 3) => {
+const _openUrl = (u, position = new THREE.Vector3(), orientation = new THREE.Quaternion(), scale, d = 3) => {
   if (scale === undefined) {
     scale = new THREE.Vector3(1, d === 3 ? 1 : window.innerHeight/window.innerWidth, 1)
   }
@@ -172,7 +172,7 @@ const _openUrl = (u, position = new THREE.Vector3(), rotation = new THREE.Quater
 
   const iframe = document.createElement('iframe');
   iframe.position = position.toArray();
-  iframe.rotation = rotation.toArray();
+  iframe.orientation = orientation.toArray();
   iframe.scale = scale.toArray();
   iframe.onload = function() {
     const contentDocument = (() => {
