--- a/examples/geometry_ml.html
+++ b/examples/geometry_ml.html
@@ -544,9 +544,10 @@ function init() {
     const material = terrainMaterial;
 
     const mesh = new THREE.Mesh(geometry, material);
-    mesh.meshId = meshId;
     mesh.visible = terrainMeshesVisible;
+    mesh.matrixAutoUpdate = false;
     mesh.frustumCulled = false;
+    mesh.meshId = meshId;
     return mesh;
   };
   const _loadTerrainMesh = (terrainMesh, {positionBuffer, positionArray, positionCount, normalBuffer, normalArray, normalCount, indexBuffer, indexArray, count}) => {
