Add terrain mesh transformMatrix support for all examples

--- a/examples/geometry_ml.html
+++ b/examples/geometry_ml.html
@@ -550,7 +550,10 @@ function init() {
     mesh.meshId = meshId;
     return mesh;
   };
-  const _loadTerrainMesh = (terrainMesh, {positionBuffer, positionArray, positionCount, normalBuffer, normalArray, normalCount, indexBuffer, indexArray, count}) => {
+  const _loadTerrainMesh = (terrainMesh, {transformMatrix, positionBuffer, positionCount, normalBuffer, normalCount, indexBuffer, count}) => {
+    terrainMesh.matrix.fromArray(transformMatrix);
+    terrainMesh.matrixWorldNeedsUpdate = true;
+
     const {geometry} = terrainMesh;
     const attributes = renderer.getAttributes();
 
