--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -655,11 +655,24 @@ const _makeRig = () => {
               const y = menuHeight*i;
 
               ctx.fillStyle = '#FFFFFF';
-              ctx.fillRect(0, y, menuWidth*0.8 - 5, menuHeight);
+              ctx.fillRect(0, y, menuWidth*0.6 - 5, menuHeight);
+              ctx.fillRect(menuWidth*0.6, y, menuWidth*0.2 - 5, menuHeight);
               ctx.fillRect(menuWidth*0.8, y, menuWidth*0.18, menuHeight);
 
               ctx.fillStyle = '#000000';
               ctx.fillText(url, 50, y + menuHeight/2 + 20);
+
+              ctx.strokeStyle = '#000000';
+              ctx.lineWidth = 3;
+              ctx.beginPath();
+              ctx.moveTo(menuWidth*0.7 - 5, y + menuHeight*0.5 - 20);
+              ctx.lineTo(menuWidth*0.7 - 5, y + menuHeight*0.5 + 20);
+              ctx.stroke();
+              ctx.beginPath();
+              ctx.moveTo(menuWidth*0.7 - 5 - 20, y + menuHeight*0.5);
+              ctx.lineTo(menuWidth*0.7 - 5 + 20, y + menuHeight*0.5);
+              ctx.stroke();
+
               ctx.fillText('x', menuWidth*0.88, y + menuHeight*0.7);
             }
           } else {
